[tool.poetry]
name = "solathon-aiohttp"
version = "1.0.0"
description = "Rewritten solathon that uses aiohttp instead httpx."
license = "MIT"
authors = ["GitBolt", "Vlad2030"]
readme = "README.md"
repository = "https://github.com/Vlad2030/solathon-aiohttp"
keywords = ["solana", "web3", "sdk", "blockchain", "crypto"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.0"
orjson = "^3.9.10"
PyNaCl = "^1.5.0"
base58 = "^2.1.1"
construct = "^2.10.67"
typing-extensions = { version = "^4.1.1", python = "3.10" }

[tool.poetry.dev-dependencies]
jedi = "^0.18.1"
neovim = "^0.3.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
